# agent-permission-diff-bot

./: README.md  action.yml  pyproject.toml
.github/workflows/: acknowledgement-dogfood.yml  agent-permission-diff.yml  ci.yml
src/agent_permission_diff_bot/: __init__.py  cli.py  engine.py  gating.py  model.py  policy.py  reporting.py  simulate.py  sources.py  surfaces.py
tests/: test_action_metadata.py  test_cli.py  test_engine.py  test_simulate.py  test_workflows.py
