[project]
name = "agent-permission-diff-bot"
version = "0.3.0"
description = "Detect and explain agent-facing permission changes in pull requests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
agent-permission-diff = "agent_permission_diff_bot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
